Fix "c++ importer does not recognize 'explicit' keyword"

It would be better to have a way to add more than one stereotype
to a UMLObject, but that's not yet implemented. Instead, an imported
explicit constructor gets a stereotype "explicit constructor".

A c++ test file has been added with this commit.

BUG:392984
FIXED-IN:2.25.0 (KDE Applications 18.04.0)