test/import/cxx/explicit-constructor.h
@@ -1,0 +1,7 @@
+class ExplicitConstructorDeclaration {
+    explicit ExplicitConstructorDeclaration(QString &param);
+};
+
+class ExplicitConstructorDefinition {
+    explicit ExplicitConstructorDefinition(QString &param) {}
+};
